# binance-historical-data

./: .gitignore  Cargo.toml  README.md  binance_fetch.py  build_sh_template.py  clean.py  download.py  download.sh  package-lock.json  package.json
.github/workflows/: build_sh.yaml  monthly-build.yml  weekly-build.yml
__tests__/: binance-fetch.test.js
data.binance.vision/: missing.csv
docs/: data_binance_vision_paths.md  high_performance_pipeline.md
info/: start_end_info_spot_2026-01-18.csv  start_end_info_spot_2026-01-19.csv  start_end_info_usd-m_2026-01-18.csv  start_end_info_usd-m_2026-01-19.csv
scripts/: download_daily_spot_2026-01-19.sh  download_daily_spot_klines_1m_2026-01-18.sh  download_daily_usd-m_2026-01-18.sh  download_daily_usd-m_2026-01-19.sh  download_monthly_spot_2026-01-18.sh  download_monthly_usd-m_2026-01-19.sh
src/: cleaner.rs  downloader.rs  index.js  main.rs
