[package]
name = "binance-fast"
version = "0.1.0"
edition = "2021"

[dependencies]
rayon = "1.10"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "rustls-tls"] }
urlencoding = "2.1"
quick-xml = "0.31"
regex = "1.10"
zip = "2.2"
polars = { version = "0.40", features = ["csv", "lazy", "parquet"] }
anyhow = "1.0"
